--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pi0w_os"]
 	path = pi0w_os
-	url = https://github.com/rcmanifest/pi0w_os.git
+	url = git@github.com:rcmanifest/pi0w_os.git
